2008-04-20  Geoff Norton  <gnorton@novell.com>

	* src/gspan.c: Fix the _NSGetEnviron define to prevent an impropoer
	pointer dereference.

2007-03-19  Bill Holmes  <billholmes54@gmail.com>

	* src/gpath.c (g_path_is_absolute) : Adding a case for '/'
	  on Windows.
	
	* src/gpath.c (g_get_user_name) : On Windows add a check for %USERNAME%
	  when %USER% fails.

	* src/gstr.c (g_strsplit, g_strsplit_set):  Change to remove truncation
	  errors with MSVC build.

	* src/gstr.c (g_filename_to_uri, g_filename_from_uri):  Fixes to handle
	  Windows paths.

	* src/gstr.c (g_ascii_strncasecmp):  Convert each character to lower case
	  before comparing.

	* src/gunicode.c (g_get_charset):  Implement for Windows.

	Contributed under MIT/X11 license.

2008-03-12  Geoff Norton  <gnorton@novell.com>

	* src/gutf8.c: Implement g_ucs4_to_utf16 and g_utf16_to_ucs4 as
	asserts.  They're needed to build mono with eglib.
	* src/gutil.h: Add a few missing function declarations to the header.
	* src/gspawn.c: Some darwin implementations don't have crt_externs.h
	So we'll just define _NSGetEnviron() ourselves.
	* Makefile.am: Dont build test when cross compiling.
	* configure.ac: Define CROSS_COMPILING when cross compiling.
	Undefine _FORTIFY_SOURCE on arm-apple-darwin as the headers it 
	requires are not available.

2008-01-15  Andreas Faerber  <andreas.faerber@web.de>

	* configure.ac: Add default G_BREAKPOINT implementation.
	Fix typo in breakpoint CPU output.

2007-12-23  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h: Include <limits.h>. Fixes #350482.

2007-11-21  Dick Porter  <dick@ximian.com>

	* src/gslist.c (g_slist_find_custom): Implement

	* src/glist.c (g_list_find_custom): Implement

	* test/list.c: Test g_list_find_custom()

	* test/slist.c: Test g_slist_find_custom()

2007-11-20  Dick Porter  <dick@ximian.com>

	* src/gstr.c: Implement g_strsplit_set() and re-implement
	g_strsplit() so it passes the additional tests. (g_strsplit()